--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>spring-boot-app</finalName>
 	</build>
 
 </project>
